# CG_proj1

./: .gitignore  README.md  q  report.md
proj1/proj1/: Bezier.cpp  Bezier.h  CMakeLists.txt  RayTracer.cpp  Raytracer.h  builder.cpp  builder.h  camera.h  common.h  main.cpp  objects.cpp  objects.h  proj1.vcxproj  scene.cpp  scene.h  vector3.cpp  vector3.h
